# Necklace-Refactoring-Kata

./: .gitignore  README.md  license.txt
cpp/: CMakeLists.txt  README.md
cpp/src/: CMakeLists.txt  Earring.cpp  Earring.h  Jewellery.cpp  Jewellery.h  JewelleryStorage.cpp  JewelleryStorage.h  Necklace.cpp  Necklace.h  Packer.cpp  Packer.h  Pendant.cpp  Pendant.h  Ring.cpp  Ring.h
cpp/test-catch2/: sample_catch.cpp
cpp/test-doctest/: sample_doctest.cpp
cpp/test-gtest/: sample_gtest.PackNecklaceTests.PackAmberChainNecklace.approved.txt  sample_gtest.PackNecklaceTests.PackChain.approved.txt  sample_gtest.PackNecklaceTests.PackDiamondNecklace.approved.txt  sample_gtest.PackNecklaceTests.PackLongChain.approved.txt  sample_gtest.PackNecklaceTests.PackPearlNecklace.approved.txt  sample_gtest.PackNecklaceTests.PackPendantNecklace.approved.txt  sample_gtest.PackNecklaceTests.PackPendantNecklaceLongChain.approved.txt  sample_gtest.PackTests.Pack_Amber_Necklace.approved.txt  sample_gtest.PackTests.Pack_Diamond_Earring_Stud.approved.txt  sample_gtest.PackTests.Pack_Diamond_Pendant_Necklace.approved.txt  sample_gtest.PackTests.Pack_Pendant.approved.txt  (+8 more)
csharp/: NecklaceRefactoringKata.sln
java/: pom.xml  settings.gradle
kotlin/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
php/: composer.json
python/: approvaltests_config.json  doc_as_test_pytest.py  fixtures.py  jewellery_storage.py  packer.py  requirements.txt  test_jewellery_storage.py  test_necklace_packing.py
typescript/: .gitignore  jest.config.js  package-lock.json  package.json  tsconfig.json
(+169 files in other folders)
